--- a/mscore/importmidi_panel.ui
+++ b/mscore/importmidi_panel.ui
@@ -42,6 +42,9 @@
      </property>
      <item>
       <widget class="QToolButton" name="toolButtonHideMidiPanel">
+       <property name="toolTip">
+        <string>Close MIDI import panel</string>
+       </property>
        <property name="text">
         <string>...</string>
        </property>
@@ -119,6 +122,9 @@
          <width>0</width>
          <height>0</height>
         </size>
+       </property>
+       <property name="toolTip">
+        <string>Apply MIDI import operations</string>
        </property>
        <property name="text">
         <string>Apply</string>
