Typo in Inspector for dynamics
Former-commit-id: 36fb941934eaf9ac1ce6c9732cad2f76d973b3cf

--- a/mscore/inspector/inspector_dynamic.ui
+++ b/mscore/inspector/inspector_dynamic.ui
@@ -114,7 +114,7 @@
        </item>
        <item>
         <property name="text">
-         <string>SYstem</string>
+         <string>System</string>
         </property>
        </item>
       </widget>
