--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -2102,7 +2102,7 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
-            <item row="11" column="0">
+            <item row="12" column="0">
              <widget class="QLabel" name="label">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -2124,16 +2124,6 @@ p, li { white-space: pre-wrap; }
               </property>
               <property name="buddy">
                <cstring>staffLineWidth</cstring>
-              </property>
-             </widget>
-            </item>
-            <item row="11" column="1">
-             <widget class="QDoubleSpinBox" name="staffLineWidth">
-              <property name="suffix">
-               <string extracomment="spatium unit">sp</string>
-              </property>
-              <property name="singleStep">
-               <double>0.100000000000000</double>
               </property>
              </widget>
             </item>
@@ -2159,8 +2149,41 @@ p, li { white-space: pre-wrap; }
               </property>
              </widget>
             </item>
+            <item row="12" column="1">
+             <widget class="QDoubleSpinBox" name="staffLineWidth">
+              <property name="suffix">
+               <string extracomment="spatium unit">sp</string>
+              </property>
+              <property name="singleStep">
+               <double>0.100000000000000</double>
+              </property>
+             </widget>
+            </item>
             <item row="3" column="1">
              <widget class="QDoubleSpinBox" name="barAccidentalDistance">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="suffix">
+               <string>sp</string>
+              </property>
+              <property name="singleStep">
+               <double>0.100000000000000</double>
+              </property>
+             </widget>
+            </item>
+            <item row="11" column="0">
+             <widget class="QLabel" name="label_103">
+              <property name="text">
+               <string>Multi measure rest margin</string>
+              </property>
+             </widget>
+            </item>
+            <item row="11" column="1">
+             <widget class="QDoubleSpinBox" name="multiMeasureRestMargin">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
                 <horstretch>0</horstretch>
