fix #22013: Quantization menu does not work when it is already selected
Former-commit-id: f63a97701daeb5d8ce3fa2085cd41d652b9037fa

--- a/mscore/importmidi_panel.ui
+++ b/mscore/importmidi_panel.ui
@@ -209,10 +209,13 @@
         </sizepolicy>
        </property>
        <property name="editTriggers">
-        <set>QAbstractItemView::CurrentChanged|QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
+        <set>QAbstractItemView::CurrentChanged|QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
        </property>
        <property name="alternatingRowColors">
         <bool>true</bool>
+       </property>
+       <property name="selectionBehavior">
+        <enum>QAbstractItemView::SelectRows</enum>
        </property>
       </widget>
      </widget>
