Larger buttons for MIDI import panel
Former-commit-id: 8852852471cb13a71c81f6e50025a6065884cffe

--- a/mscore/importmidi_panel.ui
+++ b/mscore/importmidi_panel.ui
@@ -90,6 +90,12 @@
         </item>
         <item>
          <widget class="QPushButton" name="pushButtonUp">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>29</height>
+           </size>
+          </property>
           <property name="toolTip">
            <string>Move track up</string>
           </property>
@@ -100,6 +106,12 @@
         </item>
         <item>
          <widget class="QPushButton" name="pushButtonDown">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>29</height>
+           </size>
+          </property>
           <property name="toolTip">
            <string>Move track down</string>
           </property>
@@ -134,7 +146,7 @@
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>0</height>
+          <height>29</height>
          </size>
         </property>
         <property name="toolTip">
