--- a/mscore/editstyle.ui
+++ b/mscore/editstyle.ui
@@ -172,7 +172,7 @@
    <item row="0" column="1">
     <widget class="QStackedWidget" name="pageStack">
      <property name="currentIndex">
-      <number>0</number>
+      <number>10</number>
      </property>
      <widget class="QWidget" name="Seite1">
       <layout class="QVBoxLayout" name="verticalLayout_20">
@@ -2999,6 +2999,9 @@ p, li { white-space: pre-wrap; }
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
            <layout class="QFormLayout" name="formLayout_9">
+            <property name="fieldGrowthPolicy">
+             <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+            </property>
             <item row="0" column="0">
              <widget class="QLabel" name="label_30">
               <property name="text">
@@ -3046,36 +3049,13 @@ p, li { white-space: pre-wrap; }
              </widget>
             </item>
             <item row="2" column="0">
-             <widget class="QLabel" name="label_32">
-              <property name="text">
-               <string>Bow</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <widget class="QDoubleSpinBox" name="slurBow">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="suffix">
-               <string>sp</string>
-              </property>
-              <property name="singleStep">
-               <double>0.050000000000000</double>
-              </property>
-             </widget>
-            </item>
-            <item row="3" column="0">
              <widget class="QLabel" name="label_33">
               <property name="text">
                <string>Dotted line width</string>
               </property>
              </widget>
             </item>
-            <item row="3" column="1">
+            <item row="2" column="1">
              <widget class="QDoubleSpinBox" name="slurDottedLineWidth">
               <property name="sizePolicy">
                <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
@@ -4654,7 +4634,6 @@ p, li { white-space: pre-wrap; }
   <tabstop>beamMaxSlope</tabstop>
   <tabstop>slurEndLineWidth</tabstop>
   <tabstop>slurMidLineWidth</tabstop>
-  <tabstop>slurBow</tabstop>
   <tabstop>slurDottedLineWidth</tabstop>
   <tabstop>smallStaffSize</tabstop>
   <tabstop>smallNoteSize</tabstop>
