Add loop playback feature
Former-commit-id: 3543170ae376e02485609c9569119751f10f8369

--- a/mscore/playpanel.ui
+++ b/mscore/playpanel.ui
@@ -1239,6 +1239,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QToolButton" name="loopButton">
+         <property name="text">
+          <string notr="true">L</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QToolButton" name="metronomeButton">
          <property name="text">
           <string notr="true">M</string>
