--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -124,6 +124,7 @@
         <file>data/icons/help-contents.svg</file>
         <file>data/icons/view-refresh.svg</file>
         <file>data/icons/align-vertical-center.svg</file>
+        <file>data/icons/media-playback-loop.svg</file>
         <file>data/icons/media-playback-metronome.svg</file>
         <file>data/icons/midi-input.svg</file>
         <file>data/icons/media-playback-pan.svg</file>
