--- a/mscore/inspector/inspector_textline.ui
+++ b/mscore/inspector/inspector_textline.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>289</width>
-    <height>57</height>
+    <width>291</width>
+    <height>71</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -91,6 +91,43 @@
      </item>
      <item row="0" column="2">
       <widget class="QToolButton" name="resetLineColor">
+       <property name="toolTip">
+        <string>reset value</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../musescore.qrc">
+         <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Line Width</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="1">
+      <widget class="QDoubleSpinBox" name="lineWidth">
+       <property name="suffix">
+        <string extracomment="Spatium unit">sp</string>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="2">
+      <widget class="QToolButton" name="resetLineWidth">
        <property name="toolTip">
         <string>reset value</string>
        </property>
