--- a/mscore/masterpalette.ui
+++ b/mscore/masterpalette.ui
@@ -117,6 +117,11 @@
      </item>
      <item>
       <property name="text">
+       <string>Bagpipe</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
        <string>Beam Properties</string>
       </property>
      </item>
