fix #22204: tuning parameter doesn't accept negative values
Former-commit-id: ad14ec770bfe40f6b90c46509cc23efa8a0aeeaf

--- a/mscore/inspector/inspector_note.ui
+++ b/mscore/inspector/inspector_note.ui
@@ -80,6 +80,15 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="minimum">
+        <double>-200.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>200.000000000000000</double>
+       </property>
+       <property name="singleStep">
+        <double>10.000000000000000</double>
+       </property>
       </widget>
      </item>
      <item row="6" column="0">
