--- a/mscore/inspector/inspector_ottava.ui
+++ b/mscore/inspector/inspector_ottava.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>287</width>
-    <height>68</height>
+    <width>244</width>
+    <height>85</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -63,7 +63,41 @@
      <property name="spacing">
       <number>0</number>
      </property>
-     <item row="0" column="1" colspan="2">
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Type</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="3">
+      <widget class="QToolButton" name="resetOttavaType">
+       <property name="toolTip">
+        <string>reset value</string>
+       </property>
+       <property name="text">
+        <string>...</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../musescore.qrc">
+         <normaloff>:/data/icons/resetproperty.png</normaloff>:/data/icons/resetproperty.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>14</width>
+         <height>14</height>
+        </size>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>Placement</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
       <widget class="QComboBox" name="ottavaType">
        <item>
         <property name="text">
@@ -87,15 +121,22 @@
        </item>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Type</string>
-       </property>
+     <item row="1" column="1">
+      <widget class="QComboBox" name="placement">
+       <item>
+        <property name="text">
+         <string>above</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>below</string>
+        </property>
+       </item>
       </widget>
      </item>
-     <item row="0" column="3">
-      <widget class="QToolButton" name="resetOttavaType">
+     <item row="1" column="3">
+      <widget class="QToolButton" name="resetPlacement">
        <property name="toolTip">
         <string>reset value</string>
        </property>
